# meta-practica-02

./: .gitignore  15k_log.bak  AlgoritmoGenetico.cpp  AlgoritmoGenetico.h  CMakeLists.txt  GeneradorAleatorio.cpp  GeneradorAleatorio.h  Individuo.cpp  Individuo.h  LectorCiudades.cpp  LectorCiudades.h  LectorDatosCiudades.cpp  LectorDatosCiudades.h  LectorParametros.cpp  LectorParametros.h  Logger.cpp  Logger.h  Poblacion.cpp  Poblacion.h  README.md  Reloj.cpp  Reloj.h  globals.cpp  globals.h  main.cpp
source/: Individuo.cpp  Individuo.h  LectorCiudades.cpp  LectorCiudades.h  LectorParametros.cpp  Logger.cpp  Logger.h  Poblacion.cpp  Poblacion.h  Reloj.cpp  globals.cpp  globals.h  main.cpp
